[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Images/uberkid.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemy/States/Idle.gd" type="Script" id=2]
[ext_resource path="res://Entities/Enemy/States/Alert.gd" type="Script" id=3]
[ext_resource path="res://Entities/Enemy/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Entities/Enemy/States/Chase.gd" type="Script" id=5]
[ext_resource path="res://Entities/Enemy/States/Spawn.gd" type="Script" id=6]
[ext_resource path="res://Entities/Enemy/States/Range.gd" type="Script" id=7]
[ext_resource path="res://Assets/Images/alert.png" type="Texture" id=8]
[ext_resource path="res://Entities/Enemy/States/Death.gd" type="Script" id=9]
[ext_resource path="res://Entities/Stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Audio/Sounds/snd_splat.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46.75, 10 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 52.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 49, 12 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -71 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -49, -10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shadow:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.470588 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Alert:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "alert"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Alert:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "fall"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.470588 ), Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.01, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shadow:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -47, -10 ), Vector2( -1, -10 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 0.95 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -71 ), Vector2( -1, -68 ), Vector2( -1, -71 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -47, -10 ), Vector2( -50, -10 ), Vector2( -47, -10 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "lunge"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -71 ), Vector2( -1, -57 ), Vector2( -1, -71 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -47, -10 ), Vector2( -57, -10 ), Vector2( -47, -10 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 0
collision_mask = 5
script = ExtResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 10 )]
max_health = 3

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Alert" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Chase" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Range" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Death" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="Spawn" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Shadow" type="ColorRect" parent="."]
margin_left = -49.0
margin_top = -10.0
margin_right = 43.0
margin_bottom = 3.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -71 )
z_index = 1
texture = ExtResource( 1 )

[node name="Alert" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -149 )
texture = ExtResource( 8 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -1.25, -9 )
shape = SubResource( 2 )

[node name="CollisionBox" type="Area2D" parent="." groups=["collisionbox"]]
position = Vector2( 0, -44 )
collision_layer = 2

[node name="CollisionBox" type="CollisionShape2D" parent="CollisionBox"]
position = Vector2( 4, -9.5 )
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -9 )
shape = SubResource( 10 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -9.5 )
scale = Vector2( 1, 0.15 )

[node name="PlayerPointer" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -9 )

[node name="Position2D" type="Position2D" parent="PlayerPointer"]
position = Vector2( 100, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/alert = SubResource( 11 )
anims/fall = SubResource( 9 )
anims/idle = SubResource( 8 )
anims/lunge = SubResource( 3 )
anims/spawn = SubResource( 6 )

[node name="RedFlash" type="Tween" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 15.0
avoidance_enabled = true

[node name="Timers" type="Node" parent="."]

[node name="PathfindingTimer" type="Timer" parent="Timers"]
wait_time = 0.2
autostart = true

[node name="FireballTimer" type="Timer" parent="Timers"]
wait_time = 0.75
one_shot = true

[node name="CooldownTimer" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )

[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
